--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   # Connectivity
   connectivity_plus: ^5.0.2
   flutter_dotenv: ^6.0.0
+  google_generative_ai: ^0.4.4
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
